--- a/.settings/com.appcelerator.titanium.ios.core.prefs
+++ b/.settings/com.appcelerator.titanium.ios.core.prefs
@@ -2,7 +2,7 @@ eclipse.preferences.version=1
 iosLaunchConfigurationAttributes/ATTR_MINIFY=true
 iosLaunchConfigurationAttributes/ATTR_PROJECT_NAME=plux
 iosLaunchConfigurationAttributes/appid=com.geonn.plux
-iosLaunchConfigurationAttributes/certificate=Lau Yik Onn (QNZHVK326T)
+iosLaunchConfigurationAttributes/certificate=Freejini Sdn Bhd (MB2GQ323RN)
 iosLaunchConfigurationAttributes/keychain=
 iosLaunchConfigurationAttributes/sdk_version=8.1
-iosLaunchConfigurationAttributes/uuid=7a493b4e-33f6-48c5-b63a-73ee35b61790
+iosLaunchConfigurationAttributes/uuid=8dcb6b46-51a4-4cdd-a5a5-ced1d5402756
