waze for clinic locator

--- a/.settings/com.appcelerator.titanium.ios.core.prefs
+++ b/.settings/com.appcelerator.titanium.ios.core.prefs
@@ -3,7 +3,7 @@ iosLaunchConfigurationAttributes/ATTR_MINIFY=false
 iosLaunchConfigurationAttributes/ATTR_PROJECT_NAME=plux
 iosLaunchConfigurationAttributes/ATTR_UPLOAD_DEBUG_SYMBOLS=false
 iosLaunchConfigurationAttributes/appid=com.geonn.plux
-iosLaunchConfigurationAttributes/certificate=Freejini Sdn Bhd (MB2GQ323RN)
-iosLaunchConfigurationAttributes/keychain=/Users/geomilano/Library/Keychains/login.keychain
-iosLaunchConfigurationAttributes/sdk_version=8.4
-iosLaunchConfigurationAttributes/uuid=2a24d218-3df5-4bdd-982a-2c66fe23e137
+iosLaunchConfigurationAttributes/certificate=Lau Yik Onn (KHK9F36AXG)
+iosLaunchConfigurationAttributes/keychain=
+iosLaunchConfigurationAttributes/sdk_version=9.0
+iosLaunchConfigurationAttributes/uuid=bcd8524b-5122-46e9-b773-457d73587b36
