changed app owner to PLUX Healthcare Sdn Bhd

--- a/.settings/com.appcelerator.titanium.ios.core.prefs
+++ b/.settings/com.appcelerator.titanium.ios.core.prefs
@@ -2,8 +2,8 @@ eclipse.preferences.version=1
 iosLaunchConfigurationAttributes/ATTR_MINIFY=false
 iosLaunchConfigurationAttributes/ATTR_PROJECT_NAME=plux
 iosLaunchConfigurationAttributes/ATTR_UPLOAD_DEBUG_SYMBOLS=false
-iosLaunchConfigurationAttributes/appid=com.geonn.plux
-iosLaunchConfigurationAttributes/certificate=Freejini Sdn Bhd (MB2GQ323RN)
+iosLaunchConfigurationAttributes/appid=com.plux.healthcare
+iosLaunchConfigurationAttributes/certificate=PLUX Healthcare (KFZ44PMRMC)
 iosLaunchConfigurationAttributes/keychain=/Users/geomilano/Library/Keychains/login.keychain
 iosLaunchConfigurationAttributes/sdk_version=9.1
-iosLaunchConfigurationAttributes/uuid=0587de87-d5a0-4044-a3d2-8328ff5d9484
+iosLaunchConfigurationAttributes/uuid=d58ccef3-3177-497f-82e3-be864452673c
