--- a/.settings/com.appcelerator.titanium.ios.core.prefs
+++ b/.settings/com.appcelerator.titanium.ios.core.prefs
@@ -3,7 +3,7 @@ iosLaunchConfigurationAttributes/ATTR_MINIFY=false
 iosLaunchConfigurationAttributes/ATTR_PROJECT_NAME=plux
 iosLaunchConfigurationAttributes/ATTR_UPLOAD_DEBUG_SYMBOLS=false
 iosLaunchConfigurationAttributes/appid=com.plux.healthcare
-iosLaunchConfigurationAttributes/certificate=PLUX Healthcare (KFZ44PMRMC)
+iosLaunchConfigurationAttributes/certificate=PLUX Healthcare (TUF2MNJH29)
 iosLaunchConfigurationAttributes/keychain=/Users/geomilano/Library/Keychains/login.keychain
-iosLaunchConfigurationAttributes/sdk_version=9.2
-iosLaunchConfigurationAttributes/uuid=7565d5c0-6212-46e7-bc5d-854dc731b657
+iosLaunchConfigurationAttributes/sdk_version=9.3
+iosLaunchConfigurationAttributes/uuid=5f3eb420-95c1-4fb8-be7b-dc6f52636307
