--- a/.settings/com.appcelerator.titanium.ios.core.prefs
+++ b/.settings/com.appcelerator.titanium.ios.core.prefs
@@ -3,7 +3,7 @@ iosLaunchConfigurationAttributes/ATTR_MINIFY=false
 iosLaunchConfigurationAttributes/ATTR_PROJECT_NAME=plux
 iosLaunchConfigurationAttributes/ATTR_UPLOAD_DEBUG_SYMBOLS=false
 iosLaunchConfigurationAttributes/appid=com.plux.healthcare
-iosLaunchConfigurationAttributes/certificate=PLUX Healthcare (KFZ44PMRMC)
+iosLaunchConfigurationAttributes/certificate=Lau Yik Onn (QNZHVK326T)
 iosLaunchConfigurationAttributes/keychain=
 iosLaunchConfigurationAttributes/sdk_version=10.2
-iosLaunchConfigurationAttributes/uuid=4e51c58c-775d-4d3a-84bf-fb014e26a0ea
+iosLaunchConfigurationAttributes/uuid=09095be3-45ff-45af-895e-25a2628a32ec
