--- a/app/config.json
+++ b/app/config.json
@@ -7,5 +7,8 @@
 	"os:blackberry": {},
 	"os:ios": {},
 	"os:mobileweb": {},
-	"dependencies": {}
+	"dependencies": {
+		"dk.napp.audioplayer": "1.0",
+		"geonn.voicerecorder": "1.0"
+	}
 }
