--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,6 @@ tiapp.xml
 app/assets/images/icon_referesh.png
 
 tiapp.xml
-
-tiapp.xml
 Resources/android/alloy/controllers/askDoctor/find_doctor.js
 Resources/android/alloy/controllers/askDoctor/forms.js
 Resources/android/alloy/controllers/inpatient_detail.js
@@ -26,3 +24,6 @@ Resources/android/alloy/styles/askDoctor/forms.js
 Resources/android/alloy/styles/inpatient_detail.js
 Resources/android/alloy/styles/inpatient_record.js
 Resources/android/images/test.png
+
+platform
+i18n
