--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ Resources/android/alloy/styles/askDoctor/forms.js
 Resources/android/alloy/styles/inpatient_detail.js
 Resources/android/alloy/styles/inpatient_record.js
 Resources/android/images/test.png
+tiapp.xml
