-added hint text in the box (gray color) -added home button at the result page (so user doesnt have to click back2 many times) -change font to capitalized in front only (prettier ui) -alert user if no result found. -change "speciallities" to "specialty" -added splash screen for android -sort specialty to alphabetic order -added /platform at gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ tmp
 .map
 Resources/iphone
 Resources/
+/platform
 
 Resources/android/alloy/controllers/askDoctor/find_doctor.js
 Resources/android/alloy/controllers/askDoctor/forms.js
